# call-me-mabye

./: .flake8  .gitignore  AGENTS.md  FLEXIBLE_DECODING_SUMMARY.md  Makefile  README.md  function_calls.json  pyproject.toml
.githooks/: lint-strict-hook  pre-commit
.github/instructions/: python-project.instructions.md
data/input/: function_calling_tests.json  function_calling_tests_edge_cases.json  functions_definition.json  functions_definition_edge_cases.json
data/output/: function_calls.json  function_calls_edge_cases.json
src/: __main__.py  app.py  constrain_decoder.py  constrain_decoder_state_machine.py  data_loader.py  test.py  test_flexible_decoding.py
src/call_me_maybe/: __init__.py  __main__.py  app.py
src/cli/: __init__.py  args.py  paths.py
src/decoder/: __init__.py  candidate_builder.py  constrained_decoder.py  models.py  prefix_matcher.py  regex_decoder.py  regex_token_validator.py  token_selector.py  types.py
src/decoder_pipeline/: __init__.py  candidate_builder.py  models.py  number_parameter_extractor.py  parameter_handlers.py  prefix_matcher.py  regex_parameter_extractor.py  string_parameter_extractor.py  token_selector.py
src/io/: __init__.py  loader.py  writer.py
src/models/: __init__.py  function_call.py  validation.py
src/prompt/: __init__.py  builder.py
tests/: conftest.py  test_constrained_decoder.py  test_constrained_decoder_enriched.py  test_io_and_error_handling.py  test_parameter_handlers.py  test_prompt_builder.py  test_regex_constrained_decoder.py  test_regex_parameter_extractor.py  test_regex_token_validator.py
(+5 files in other folders)
