[project]
name = "call-me-maybe"
version = "0.1.0"
description = "42 function-calling project scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=2.2.0",
    "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
exclude = "(^llm_sdk/)|(^\\.venv/)"
